Refactor LinkedLists to ArrayLists in Network class